--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body {
 
 /* Estilos de botón */
 button {
-    /*padding: 15px 30px;*/
+    padding: 15px 30px;
     font-family: "Inter", sans-serif;
     font-size: 16px;
     border: 2px solid #000;
